# D-D-wiki

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SKILL.md  active_task.md  decisions.md  log.md
.obsidian/: graph.json  workspace.json
Dataset/: dnd_lexicon.json  dungeons-and-dragons-a-cost-benefit-analysis.ipynb  prepare_lexicon.py  run.sh  update_lexicon.py
Lost-Mine-of-Phandelver/: ถ้ำแห่งเสียงคลื่นสะท้อน - เหมืองที่สาปสูญแห่งแฟนเดลเวอร์.md  บทนำ - เหมืองที่สาปสูญแห่งแฟนเดลเวอร์.md  ภาคผนวก A_ ไอเท็มเวทย์มนต์.md  ภาคผนวก B_ มอนสเตอร์.md  ลูกศรของก๊อบลิน - เหมืองที่สาปสูญแห่งแฟนเดลเวอร์.md  แฟนดูลิน - เหมืองที่สาปสูญแห่งแฟนเดลเวอร์.md  ใยของแมงมุม - เหมืองที่สาปสูญแห่งแฟนเดลเวอร์.md
campaigns/example/fixtures/: pinebrook-icicles.yaml
campaigns/example/sessions/: session01.md
campaigns/lmop/scenes/: goblin_arrows_manifest.yaml  manifest.yaml  monsters-extracted.yaml
campaigns/lmop/sessions/: session01.md
crates/dm/: Cargo.toml
crates/dm-api/: Cargo.toml
crates/dm-api/src/: main.rs
crates/dm-claude/: Cargo.toml
crates/dm-claude/src/: lib.rs
crates/dm-core/: Cargo.toml
crates/dm-core/src/: check.rs  combat.rs  dice.rs  effect.rs  entity.rs  intent.rs  lib.rs
crates/dm-core/tests/: pinebrook_scenario.rs
crates/dm-wiki/: Cargo.toml
crates/dm-wiki/src/: fixtures.rs  lib.rs  lmop.rs  scene.rs  (+1 more)
crates/dm/src/: main.rs
design/: adventure-pinebrook.md  architecture.md  index.md  memory-system.md  prototype-1-summary.md  references.md  roadmap.md  rules-5e-2024.md
py-tools/: requirements-ml.txt  requirements.txt
py-tools/intent_classifier/: api_server.py  config.py  generate_synthetic_data.py  train_intent.py
raw/: SamuelSchlesinger_chronicler_ D&D 5e Compatible AI Role Playing Game.md  cynicaloptimist_improved-initiative_ Combat tracker for Dungeons and Dragons (D&D) 5th Edition.md  plan.md  กฏฟรี D&D (2024).md
(+22 files in other folders)
