[package]
name = "dm-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "dm-api"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dm-core.workspace = true
dm-wiki.workspace = true
dm-claude.workspace = true
